# install-cuda-torch-with-uv-on-windows

./: README.md  pyproject.toml
docs/: troubleshooting.md
scripts/: 01_setup.ps1  02_verify.ps1  03_clean.ps1
specs/: install-cuda-torch-with-uv-in-windows.md
